<resources>
    <string name="app_name">Calc</string>

<!--    Numbers-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>


<!--    Operations-->
    <string name="div">÷</string>
    <string name="mul">x</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="eq">=</string>


<!--    Functions-->
    <string name="ac">AC</string>
    <string name="signSwitch">+/-</string>
    <string name="perc">%</string>
</resources>
